--- a/css/ranking.css
+++ b/css/ranking.css
@@ -40,7 +40,7 @@ th {
   color: white;
 }
 h1 {color: #fff;margin-bottom: 15px;}
-footer {width: 100%;padding: 12px;background: #0a0b0c;color: #fff;text-align: center;position: absolute;bottom: 0}
+footer {width: 100%;padding: 12px;background: #0a0b0c;color: #fff;text-align: center;}
 @media only screen and (max-width: 900px) {
     #m-btn {display: inline-block;position: absolute;right: 35px;top: 15px;}
     body {overflow-y: hidden;}
