--- a/css/login.css
+++ b/css/login.css
@@ -25,7 +25,7 @@ header{width:100%;height: 80px;position: fixed;z-index: 1;background: #0a0b0c;}
 #menu-items .menu-item:hover{transform: scale(1.2);transition: linear .1s;color: #ffa214;}
 .login {margin-left: auto;position: absolute;right: 0;border: 1px solid #ffa214;color: #ffa214;}
 .login:hover{background: #ffa214;color: #fff;transition: linear .2s;}
-#login {width: 1200px;height:100vh;margin: 0 auto;display: flex;justify-content: center;align-items: center;flex-direction: column; }
+#login {width: 1200px;height:100vh;margin: 0 auto; display: flex;justify-content: center;align-items: center;flex-direction: column;}
 h1{color: #fff;position: absolute;top: 0;left: 20%;}
 #twitch {color: #fff;position: absolute;top:0;right: 18%;padding: 8px;background: #924afe;border-radius: 4px;}
 #form-login {
@@ -53,12 +53,12 @@ h1{color: #fff;position: absolute;top: 0;left: 20%;}
     cursor: pointer;
 }
 .btn:hover {background: #ffa214;color: #fff;transition: linear .2s;}
-footer {width: 100%;padding: 12px;background: #0a0b0c;color: #fff;text-align: center;position: absolute;bottom: 0;}
+footer {width: 100%;padding: 12px;background: #0a0b0c;color: #fff;text-align: center;}
 
 @media only screen and (max-width: 900px) {
     #m-btn {display: inline-block;position: absolute;right: 35px;top: 15px;}
     header{height: 60px;}
-    #logo {width: 200px;height: 50px;}
+    #logo {width: 200px;height: 50px;margin: 80px 0 25px 10%;}
     .container, #login, #menu, #form-login {width: 100%;}
     #menu-items {display: none;position: relative;top: 35px;}
     .item-box {display: block;width: 90%;margin: 12px auto;}
@@ -72,6 +72,7 @@ footer {width: 100%;padding: 12px;background: #0a0b0c;color: #fff;text-align: ce
         color: #fff;
         padding: 25px;
     }
+    #login {display: block;margin-bottom: 50px;}
     .field {width: 99%;}
     h1 {left: 7%;}
     #twitch {right: 7%;}
