--- a/css/login.css
+++ b/css/login.css
@@ -14,6 +14,7 @@ header{width:100%;height: 80px;position: fixed;z-index: 1;background: #0a0b0c;}
     position: relative;
 }
 #m-btn {color: #ffa214;font-size: 26px;display: none;}
+#menu-items {width: 100%;}
 #menu-items .menu-item, .login {
     display: inline-block;
     padding: 8px 25px;
@@ -23,7 +24,7 @@ header{width:100%;height: 80px;position: fixed;z-index: 1;background: #0a0b0c;}
     top: 18px;
 }
 #menu-items .menu-item:hover{transform: scale(1.2);transition: linear .1s;color: #ffa214;}
-.login {margin-left: auto;position: absolute;right: 0;border: 1px solid #ffa214;color: #ffa214;}
+.login{margin-left: auto;position: absolute;right: 0;border: 1px solid #ffa214;color: #ffa214;}
 .login:hover{background: #ffa214;color: #fff;transition: linear .2s;}
 #login {width: 1200px;height:100vh;margin: 0 auto; display: flex;justify-content: center;align-items: center;flex-direction: column;}
 h1{color: #fff;position: absolute;top: 0;left: 20%;}
@@ -60,15 +61,14 @@ footer {width: 100%;padding: 12px;background: #0a0b0c;color: #fff;text-align: ce
     header{height: 60px;}
     #logo {width: 200px;height: 50px;margin: 80px 0 25px 10%;}
     .container, #login, #menu, #form-login {width: 100%;}
-    #menu-items {display: none;position: relative;top: 35px;}
-    .item-box {display: block;width: 90%;margin: 12px auto;}
+    #menu-items {display: none;background: #1d2125;margin-top: 50px;}
     #menu-items .login, #menu-items .menu-item {
         display: block;
         width: 100%;
         border: none;
-        background: #1e2630;
         position: relative;
-        top: 25px;
+        background: #1d2125;
+        right: 0;
         color: #fff;
         padding: 25px;
     }
