--- a/css/master.css
+++ b/css/master.css
@@ -87,5 +87,6 @@ footer {padding: 12px;background: #0a0b0c;color: #fff;text-align: center;margin-
         color: #fff;
         padding: 25px;
     }
+    #items {text-align: center;}
     #menu-items .menu-item:hover {transform: scale(1);}
 }
